--- a/AcadeAppWeb/AcadeAppWeb/Layout/NavMenu.razor
+++ b/AcadeAppWeb/AcadeAppWeb/Layout/NavMenu.razor
@@ -4,7 +4,7 @@
     <NavLink href="/login">Login</NavLink>
     <NavLink href="/cadastro">Cadastro</NavLink>
     <button class="botao-link" @onclick="OnToggleThemeClick">
-        @(IsLight ? "🌙" : "☀️")
+        @(IsLight ? "☀️" : "🌙")
     </button>
 
 </nav>
