Added section for Educação Ambiental

--- a/AcadeAppWeb/AcadeAppWeb/Layout/NavMenu.razor
+++ b/AcadeAppWeb/AcadeAppWeb/Layout/NavMenu.razor
@@ -3,6 +3,7 @@
     <NavLink href="/agendar">Agendar</NavLink>
     <NavLink href="/login">Login</NavLink>
     <NavLink href="/cadastro">Cadastro</NavLink>
+    <NavLink href="/educacao">Dicas</NavLink>
     <button class="botao-link" @onclick="OnToggleThemeClick">
         @(IsLight ? "☀️" : "🌙")
     </button>
