--- a/AcadeAppWeb/AcadeAppWeb/wwwroot/css/style.css
+++ b/AcadeAppWeb/AcadeAppWeb/wwwroot/css/style.css
@@ -42,6 +42,10 @@ table, th, td {
     color: var(--text-color);
 }
 
+td {
+    margin: 10px;
+}
+
 /* ===========================
    Forms
 =========================== */
