--- a/AcadeAppWeb/AcadeAppWeb/Pages/Login.razor
+++ b/AcadeAppWeb/AcadeAppWeb/Pages/Login.razor
@@ -12,9 +12,9 @@
   </div>
 
   <div class="button-box">
-    <a href="/forgot-password" class="mt-2 d-block">Esqueci minha senha</a>
-
     <a href="/cadastro" class="botao-link">Cadastrar</a>
+
+        <a href="/forgot-password" class="mt-2 d-block" style="color: white;">Esqueci minha senha</a>
   </div>
 
   <div class="google-login">
